[package]
name = "llama"
version = "0.1.0"
edition = "2021"
description = "half-safe bindings for llama.cpp"
license = "MIT"
repository = "https://github.com/iacore/llama-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
llama-sys = "0.1.1"
